// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@carte/core Block Kit admin pages > admin renders stable canonical Block Kit JSON 1`] = `
{
  "blocks": [
    {
      "block_id": "menus-intro",
      "text": "Menu library. Create menus, sections, and menu items for storefront display.",
      "type": "section",
    },
    {
      "block_id": "menus-summary-divider",
      "type": "divider",
    },
    {
      "block_id": "menus-summary",
      "items": [
        {
          "label": "Menus",
          "value": "1",
        },
        {
          "label": "Sections",
          "value": "1",
        },
        {
          "label": "Items",
          "value": "1",
        },
      ],
      "type": "stats",
    },
    {
      "block_id": "menus-actions-divider",
      "type": "divider",
    },
    {
      "block_id": "menus-actions",
      "elements": [
        {
          "action_id": "content.create.carte_menus",
          "label": "Create menu",
          "style": "primary",
          "type": "button",
        },
        {
          "action_id": "content.create.carte_menu_items",
          "label": "Create item",
          "type": "button",
        },
        {
          "action_id": "route.post.menu-items/86",
          "label": "86 item",
          "style": "danger",
          "type": "button",
        },
      ],
      "type": "actions",
    },
  ],
  "plugin": "carte-core",
  "title": "Menus",
  "type": "page",
}
`;

exports[`@carte/core Block Kit admin pages > admin/hours renders stable canonical Block Kit JSON 1`] = `
{
  "blocks": [
    {
      "block_id": "hours-intro",
      "text": "Weekly hours. Maintain regular service windows and dated closures.",
      "type": "section",
    },
    {
      "block_id": "hours-summary-divider",
      "type": "divider",
    },
    {
      "block_id": "hours-summary",
      "items": [
        {
          "label": "Weekly entries",
          "value": "1",
        },
        {
          "label": "Closures",
          "value": "1",
        },
      ],
      "type": "stats",
    },
    {
      "block_id": "hours-actions-divider",
      "type": "divider",
    },
    {
      "block_id": "hours-actions",
      "elements": [
        {
          "action_id": "content.create.carte_hours",
          "label": "Add hours",
          "style": "primary",
          "type": "button",
        },
        {
          "action_id": "content.create.carte_closures",
          "label": "Add closure",
          "type": "button",
        },
      ],
      "type": "actions",
    },
  ],
  "plugin": "carte-core",
  "title": "Hours",
  "type": "page",
}
`;

exports[`@carte/core Block Kit admin pages > admin/restaurant renders stable canonical Block Kit JSON 1`] = `
{
  "blocks": [
    {
      "block_id": "restaurant-intro",
      "text": "Restaurant profile. Manage public restaurant identity and contact details.",
      "type": "section",
    },
    {
      "block_id": "restaurant-summary-divider",
      "type": "divider",
    },
    {
      "block_id": "restaurant-summary",
      "items": [
        {
          "label": "Profiles",
          "value": "1",
        },
      ],
      "type": "stats",
    },
    {
      "block_id": "restaurant-actions-divider",
      "type": "divider",
    },
    {
      "block_id": "restaurant-actions",
      "elements": [
        {
          "action_id": "content.edit.carte_restaurants",
          "label": "Edit restaurant",
          "style": "primary",
          "type": "button",
        },
      ],
      "type": "actions",
    },
  ],
  "plugin": "carte-core",
  "title": "Restaurant",
  "type": "page",
}
`;

exports[`@carte/core Block Kit admin pages > admin/settings renders stable canonical Block Kit JSON 1`] = `
{
  "blocks": [
    {
      "block_id": "settings-intro",
      "text": "Carte settings. Configure currency, locale, timezone, and x402 wallet details.",
      "type": "section",
    },
    {
      "block_id": "cloudflare-free-warning-divider",
      "type": "divider",
    },
    {
      "block_id": "cloudflare-free-warning",
      "text": "Cloudflare Free warning. Cloudflare Free has no Dynamic Worker Loader, so sandboxed plugins run unsandboxed (in-process) instead of isolated. See EmDash Issue #149.",
      "type": "section",
    },
    {
      "block_id": "settings-summary-divider",
      "type": "divider",
    },
    {
      "block_id": "settings-summary",
      "items": [
        {
          "label": "Settings records",
          "value": "1",
        },
      ],
      "type": "stats",
    },
    {
      "block_id": "settings-actions-divider",
      "type": "divider",
    },
    {
      "block_id": "settings-actions",
      "elements": [
        {
          "action_id": "content.edit.carte_settings",
          "label": "Edit settings",
          "style": "danger",
          "type": "button",
        },
      ],
      "type": "actions",
    },
  ],
  "plugin": "carte-core",
  "title": "Settings",
  "type": "page",
}
`;
